app/src/main/java/com/example/architecture/bad/myfigurecollection/util/Constants.java
package com.example.architecture.bad.myfigurecollection.util;

/**
 * Created by spawn on 09/01/17.
 */

public class Constants {

    private Constants(){
    }

    public static final String SAFE_CONTENT = "0";

}
